[project]
name = "chat-with-your-code-rag-for-github-repositories"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deeplake>=4.6.2",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "llama-index>=0.14.22",
    "llama-index-readers-github>=0.11.2",
    "llama-index-vector-stores-deeplake>=0.5.0",
    "numpy>=2.4.6",
    "openai>=2.40.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]
